// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > initialValue sets the value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  bar[7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders and apply (<tab>) suggestion 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mb[39m[27m[90mar[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  bar[7m [27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mx[39m[27m[90myz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  x[7m[90my[39m[27m[90mz[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  xy[7m[90mz[39m[27m[90m[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m[2m[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mx[39m[27m[90myz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  x[7m[90my[39m[27m[90mz[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  xy[7m[90mz[39m[27m[90m[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > validation errors render and clear (using Error) 1`] = `
[
  "<cursor.backward count=999>",
  "",
  "<erase.down>",
  "[90m│[39m
[33m▲[39m  foo
[33m│[39m  [7m[90mx[39m[27m[90myz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  x[7m[90my[39m[27m[90mz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  x[7m[90my[39m[27m[90mz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  xy[7m[90mz[39m[27m[90m[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > validation errors render and clear 1`] = `
[
  "<cursor.backward count=999>",
  "",
  "<erase.down>",
  "[90m│[39m
[33m▲[39m  foo
[33m│[39m  [7m[90mx[39m[27m[90myz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  x[7m[90my[39m[27m[90mz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  x[7m[90my[39m[27m[90mz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  xy[7m[90mz[39m[27m[90m[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > initialValue sets the value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  bar[7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders and apply (<tab>) suggestion 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mb[39m[27m[90mar[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  bar[7m [27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mx[39m[27m[90myz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  x[7m[90my[39m[27m[90mz[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  xy[7m[90mz[39m[27m[90m[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m [27m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m[2m[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[90mx[39m[27m[90myz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  x[7m[90my[39m[27m[90mz[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  xy[7m[90mz[39m[27m[90m[39m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > validation errors render and clear (using Error) 1`] = `
[
  "<cursor.backward count=999>",
  "",
  "<erase.down>",
  "[90m│[39m
[33m▲[39m  foo
[33m│[39m  [7m[90mx[39m[27m[90myz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  x[7m[90my[39m[27m[90mz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  x[7m[90my[39m[27m[90mz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  xy[7m[90mz[39m[27m[90m[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > validation errors render and clear 1`] = `
[
  "<cursor.backward count=999>",
  "",
  "<erase.down>",
  "[90m│[39m
[33m▲[39m  foo
[33m│[39m  [7m[90mx[39m[27m[90myz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  x[7m[90my[39m[27m[90mz[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  x[7m[90my[39m[27m[90mz[39m
[33m└[39m  [33mshould be xy[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  xy[7m[90mz[39m[27m[90m[39m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "<cursor.show>",
]
`;
